[gd_scene load_steps=3 format=3 uid="uid://b7yl36oh2f3bj"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_oc7sk"]
[ext_resource type="Theme" uid="uid://bxy7sal2n5myb" path="res://themes/codeblock.tres" id="2_c4b70"]

[node name="Main" type="Node2D"]
script = ExtResource("1_oc7sk")

[node name="Menus" type="HBoxContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="CodeblockMenu" type="VBoxContainer" parent="Menus"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_c4b70")

[node name="ValueMenu" type="VBoxContainer" parent="Menus"]
layout_mode = 2
theme = ExtResource("2_c4b70")

[node name="FPSCounter" type="Label" parent="."]
offset_top = 625.0
offset_right = 1.0
offset_bottom = 648.0
size_flags_horizontal = 0

[node name="TargetTypeMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true

[node name="ActionTypeMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true

[node name="SoundTypeMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true

[node name="ParticleTypeMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true

[node name="PotionTypeMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true

[node name="GameValueTypeMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true

[node name="ParameterMenuButton" type="MenuButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
theme = ExtResource("2_c4b70")
disabled = true
